--- a/src/app/pages/main-view/main-view.component.html
+++ b/src/app/pages/main-view/main-view.component.html
@@ -13,47 +13,21 @@
 
     <div class="board-wrapper">
       <div class="board-columns" cdkDropListGroup>
-        <div class="board-column">
+        <div class="board-column" *ngFor="let column of board.columns">
           <div class="column-title">
-            Open
+            {{column.name}}
           </div>
 
           <div class="tasks-container"
                cdkDropList
                #todoList="cdkDropList"
-               [cdkDropListData]="todo"
+               [cdkDropListData]="column.tasks"
                (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let item of todo" cdkDrag>
+            <div class="task" *ngFor="let item of column.tasks" cdkDrag>
               {{item}}
             </div>
           </div>
-        </div>
 
-        <div class="board-column">
-          <div class="column-title">
-            Ready
-          </div>
-          <div class="tasks-container"
-               cdkDropList
-               #todoList="cdkDropList"
-               [cdkDropListData]="done"
-               (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let item of done" cdkDrag>
-              {{item}}
-            </div>
-          </div>
-        </div>
-
-        <div class="board-column">
-          <div class="column-title">
-            Implementation
-          </div>
-        </div>
-
-        <div class="board-column">
-          <div class="column-title">
-            Done
-          </div>
         </div>
       </div>
     </div>
